# CepGenDiffVM

./: CMakeLists.txt  README.md
CepGenDiffVM/: BreitWigner.h  EPA.h
cards/: diffvm_cfg.py
python/: DiffVM_cff.py  EPA_cfi.py
src/: BreitWigner.cpp  DiffVM.cpp  DiffVMProcess.cpp  EPA.cpp
